# dift

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml
dift/: __init__.py  cli.py
dift/core/: comparator.py  quality_diff.py  risk.py  row_diff.py  schema_diff.py  stats_diff.py
dift/io/: readers.py
dift/utils/: hashing.py
examples/: new.csv  new.parquet  old.csv  old.parquet
tests/: conftest.py  test_cli.py  test_cli_errors.py  test_examples.py
