[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dift"
version = "0.1.0"
description = "Git diff for datasets: compare datasets and understand what changed."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Reginald Erzoah" }
]
keywords = [
  "data",
  "dataset",
  "diff",
  "data-quality",
  "validation",
  "etl",
  "mlops",
  "analytics"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "pandas>=2.2.0",
  "polars>=1.0.0",
  "pyarrow>=15.0.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "mkdocs>=1.6.0",
  "pre-commit>=3.7.0"
]

[project.urls]
Homepage = "https://github.com/reginald-erzoah/dift"
Repository = "https://github.com/reginald-erzoah/dift"
Issues = "https://github.com/reginald-erzoah/dift/issues"

[project.scripts]
dift = "dift.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["dift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
